--- a/README
+++ b/README
@@ -18,7 +18,7 @@ In your controller:
   def show
     @product = Product.find(params[:id])
     
-    meta :title => @product.name, :description => @product.description
+    meta :title => @product.name, :description => @product.description, :keywords => @product.tag_list
   end
   
 In your application.html.erb:
@@ -26,7 +26,7 @@ In your application.html.erb:
   <head>
     <title>My Site</title>
     ...
-    <%= metamagic :title => "My default title", :description => "My default description." %>
+    <%= metamagic :title => "My default title", :description => "My default description.", :keywords => %w(keyword1 keyword2 keyword3) %>
     ...
   </head
 
